--- a/tools/diff2dates/Makefile
+++ b/tools/diff2dates/Makefile
@@ -1,14 +1,18 @@
 CFLAGS = -g -Wall
 PNAME  = diff2dates
+LNAME  = libdiff2dates.so
 
-all : $(PNAME)
+all : $(PNAME).o $(LNAME)
 	gcc $(CFLAGS) -o $(PNAME) main.c $(PNAME).o
 
-$(PNAME) :
-	gcc $(CFLAGS) -c $(PNAME).c
+$(PNAME).o :
+	gcc $(CFLAGS) -fPIC -c $(PNAME).c
+
+$(LNAME) :
+	gcc -shared -o $(LNAME) $(PNAME).o
 
 clean :
-	rm $(PNAME) $(PNAME).o
+	rm $(PNAME) $(PNAME).o $(LNAME)
 
 check : $(PNAME)
 	gcc $(CFLAGS) -o tests tests.c $(PNAME).o
