--- a/tools/diff2dates/Makefile
+++ b/tools/diff2dates/Makefile
@@ -1,20 +1,18 @@
+CC     = gcc
 CFLAGS = -g -Wall
 PNAME  = diff2dates
 LNAME  = libdiff2dates.so
 
-build : $(PNAME).o $(LNAME)
-	gcc $(CFLAGS) -o $(PNAME) main.c $(PNAME).o
-
-$(PNAME).o :
-	gcc $(CFLAGS) -fPIC -c $(PNAME).c
-
-$(LNAME) :
-	gcc -shared -o $(LNAME) $(PNAME).o
+build :
+	$(CC) $(CFLAGS) -fPIC -c $(PNAME).c
+	$(CC) -shared -o $(LNAME) $(PNAME).o
+	$(CC) $(CFLAGS) -o $(PNAME) main.c $(PNAME).o
 
 clean :
 	rm $(PNAME) $(PNAME).o $(LNAME)
 
-check : $(PNAME)
-	gcc $(CFLAGS) -o tests tests.c $(PNAME).o
+check :
+	$(CC) $(CFLAGS) -fPIC -c $(PNAME).c
+	$(CC) $(CFLAGS) -o tests tests.c $(PNAME).o
 	./tests
 	rm ./tests $(PNAME).o
